Fix section spacing to be truly equal (py-10)

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 @layer components {
   .section-padding {
-    @apply pt-8 pb-12 px-4 sm:px-6 lg:px-8;
+    @apply py-10 px-4 sm:px-6 lg:px-8;
   }
   
   .container-max {
